Added bg image and flex to body for better positioning of the elements on the page

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
 
-    <h1>📚 My Library</h1>
+    <h1 class="main__title">📚 My Library</h1>
 
     <!-- Open modal button -->
     <button id="openModal">➕ Add Book</button>
 
     <!-- Modal -->
     <div class="modal" id="modal">
-        <div class="modal-content">
+        <div class="modal__content">
         <button class="close" id="closeModal">&times;</button>
         <h2>Add Book</h2>
 
