added more accurate class name to the closebtn

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Modal -->
     <div class="modal" id="modal">
         <div class="modal__content">
-        <button class="close" id="closeModal">&times;</button>
+        <button class="close__btn" id="closeModal">&times;</button>
         <h2 class="modal__btn--title">Add Book</h2>
 
         <form id="bookForm" prevent-default="true">
