--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 <body>
 
-    <h1 class="main__title">📚 My Library</h1>
+    <header class="header">
+        <h1 class="main__title">📚 My Library</h1>
 
-    <!-- Open modal button -->
-    <button id="openModal">➕ Add Book</button>
+        <!-- Open modal button -->
+        <button id="openModal">➕ Add Book</button>
+    </header>
 
     <!-- Modal -->
     <div class="modal" id="modal">
